# anti-spam-robocall-mitigation-toolkit

./: LICENSE  README.md  pyproject.toml  requirements.txt
cisco/cvp_icm/: README_CVP_ICM.md  icm_script_logic.md  sample_api_response.json
data/samples/: ani_risk_sources_sample.csv  call_events_sample.csv  fcc_provider_reference_sample.csv  twilio_lookup_sample.json
docs/: architecture.md  data_dictionary.md  devnet_submission.md
scripts/: build_db.py  query_ani.py  run_api.py  score_call_events.py
src/antispam_robocall_toolkit/: __init__.py  api.py  cube_export.py  database.py  importer.py  models.py  normalize.py  scoring.py
src/antispam_robocall_toolkit/adapters/: twilio_lookup.py
tests/: test_normalize.py  test_scoring.py
